--- a/app/src/main/res/menu/menu_data_base_test.xml
+++ b/app/src/main/res/menu/menu_data_base_test.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".DataBaseTest">
     <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    android:id="@+id/action_settings"
+    android:title="@string/action_settings"
+    android:orderInCategory="100"
+    app:showAsAction="never" />
+    <item
+        android:id="@+id/action_delete"
+        android:title="@string/action_delete"
         android:orderInCategory="100"
         app:showAsAction="never" />
 </menu>
